# cogito

./: .gitignore  Makefile  README.md
.claude/: Makefile  kind-config.yaml
.github/workflows/: release.yml  verify.yml
charts/: Chart.yaml  values-production.yaml  values.schema.json  values.yaml
charts/templates/: _helpers.tpl  api-configmap.yaml  api-deployment.yaml  api-service.yaml  execution-namespace.yaml  execution-networkpolicy.yaml  litellm-configmap.yaml  litellm-deployment.yaml  litellm-role-policies-configmap.yaml  litellm-service.yaml  litellm-serviceaccount.yaml  supervisor-migration-job.yaml  worker-configmap.yaml  worker-deployment.yaml  worker-role.yaml  worker-serviceaccount.yaml
docs/: product.md  releases.md
scripts/: kind-e2e-phase8.sh
services/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 20260718_01_supervisor_runs.py  20260718_02_generated_plan.py  20260718_03_plan_approvals.py  20260718_04_outbox_leases.py  20260719_05_plan_revision_workflows.py  20260719_06_plan_revision_identity.py  20260719_07_artifact_reference_identity.py  20260719_08_agent_runs.py
services/api/src/cogito_api/: auth.py  config.py  dag.py  database_bootstrap.py  main.py  models.py  observability.py  outbox.py  planner.py  storage.py  supervisor.py  temporal.py
services/api/tests/: conftest.py  fakes.py  test_approvals.py  test_config.py  test_dag.py  test_database_bootstrap.py  test_execution_ceilings_bdd.py  test_migrations.py  test_observability.py  test_outbox.py  test_plan_approval_bdd.py  test_planner.py  test_planning_runs.py  test_runs.py  test_storage.py  test_temporal.py
services/api/tests/features/: execution_ceilings.feature  plan_approval.feature
services/worker/: Dockerfile  pyproject.toml
services/worker/src/cogito_worker/: activities.py  budgets.py  config.py  execution.py  execution_pod.py  execution_prepare.py  harness.py  models.py  observability.py  run_state.py  specs.py  storage.py  worker.py  workflows.py
services/worker/tests/: fakes.py  test_activities.py  test_execution.py  test_execution_prepare.py  test_harness.py  test_specs.py  test_workflows.py
