[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cogito-api"
version = "0.1.0"
description = "Cogito plan submission API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "minio>=7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cogito_api"]
