[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cogito-api"
version = "0.1.0"
description = "Cogito plan submission API"
requires-python = ">=3.14"
dependencies = [
    "fastapi==0.139.2",
    "uvicorn[standard]==0.51.0",
    "pydantic==2.13.4",
    "minio==7.2.20",
    "temporalio==1.30.0",
    "SQLAlchemy==2.0.51",
    "alembic==1.18.5",
    "psycopg[binary]==3.3.4",
    "httpx==0.28.1",
    "PyJWT[crypto]==2.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "pytest-bdd==8.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cogito_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
