[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cogito-worker"
version = "0.1.0"
description = "Cogito Temporal worker"
requires-python = ">=3.12"
dependencies = [
    "temporalio>=1.8",
    "minio>=7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cogito_worker"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
