[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cogito-worker"
version = "0.1.0"
description = "Cogito Temporal worker"
requires-python = ">=3.14"
dependencies = [
    "temporalio==1.30.0",
    "minio==7.2.20",
    "kubernetes==36.0.3",
    "PyYAML==6.0.3",
    "SQLAlchemy==2.0.51",
    "psycopg[binary]==3.3.4",
    "opentelemetry-sdk==1.43.0",
    "opentelemetry-exporter-otlp-proto-http==1.43.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.43.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cogito_worker"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
